message: fix large text message going out of screen when its reply

--- a/src/Components/Message/Message.css
+++ b/src/Components/Message/Message.css
@@ -127,6 +127,7 @@ pre code {
 
 .message-content-row__left-column {
     flex-grow: 1;
+    width: 100%;
 }
 
 .message-title {
